--- a/src/app/travel-form/travel-form.component.scss
+++ b/src/app/travel-form/travel-form.component.scss
@@ -14,6 +14,11 @@ select,
 button {
   padding: 10px;
   margin: 5px 0;
+  &:disabled,
+  &[disabled] {
+    cursor: not-allowed;
+    opacity: 0.7;
+  }
 }
 input,
 select {
@@ -22,4 +27,9 @@ select {
   background-color: #ffffff;
   font-size: 16px;
   border-radius: 4px;
+}
+.control-wrapper {
+  .ng-invalid.ng-touched {
+    border: 2px solid #ff0000;
+  }
 }
