--- a/src/app/travel-form/travel-form.component.html
+++ b/src/app/travel-form/travel-form.component.html
@@ -35,7 +35,7 @@
     <select
       formControlName="numberOfTravelers"
       required
-      (change)="addFormControls(defaultForm.get('numberOfTravelers'))"
+      (change)="addFormControls(defaultForm.get('numberOfTravelers').value)"
     >
       <option selected>Please select</option>
       <option *ngFor="let traveler of travelers">{{ traveler }}</option>
@@ -52,3 +52,4 @@
   </div>
 </form>
 <button (click)="onSubmit()" [disabled]="!defaultForm.valid">Submit</button>
+<div>Form valid: {{ defaultForm.valid }}</div>
