Refactored toggling logic, added auto form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,10 @@
       <a routerLink="/" routerLinkActive="active">home</a>
     </li>
     <li class="links">
-      <a routerLink="/form" routerLinkActive="active">form</a>
+      <a routerLink="/travel" routerLinkActive="active">Travel Form</a>
+    </li>
+    <li class="links">
+      <a routerLink="/auto" routerLinkActive="active">Auto Form</a>
     </li>
   </ul>
 </div>
