Added home component

--- a/src/app/travel-form/travel-form.component.html
+++ b/src/app/travel-form/travel-form.component.html
@@ -52,4 +52,6 @@
   </div>
 </form>
 <button (click)="onSubmit()" [disabled]="!defaultForm.valid">Submit</button>
-<div>Form valid: {{ defaultForm.valid }}</div>
+<div>
+  <p>Form valid: {{ defaultForm.valid }}</p>
+</div>
